implement gui for team management

--- a/src/main/resources/lang/en_US.json
+++ b/src/main/resources/lang/en_US.json
@@ -24,5 +24,24 @@
     "playerLeft": "The player <player> left the team.",
     "playerRemoved": "The player <player> was removed from the team.",
     "info.name": "Team informations of <name>:",
-    "info.tag": "Tag: <tag>"
+    "info.tag": "Tag: <tag>",
+    "teamgui.name.name": "Name",
+    "teamgui.name.lore": "Click to change the team name.",
+    "teamgui.tag.name": "Tag",
+    "teamgui.tag.lore": "Click to change the team tag.",
+    "teamgui.players.name": "View players",
+    "teamgui.close.name": "Close",
+    "teamgui.remove.name": "Remove team",
+    "teamgui.leave.name": "Leave",
+    "createteamgui.add.name": "Create team",
+    "createteamgui.invites.name": "View invites",
+    "chatinput.exit": "exit",
+    "chatinput.cancel": "You exited the input.",
+    "chatinput.changename.question": "Whrite yout new Team name to the chat or exit with \"<exit>\"",
+    "playermanagement.makeowner.name": "Make owner",
+    "playermanagement.kick.name": "Kick",
+    "InvitePlayer": "invite player",
+    "gotTeamInvite": "You got new team invites",
+    "noOpenSelf": "You cannot manage yourself",
+    "alreadyHasInvite": "The player <player> already has an invite from you."
 }
