--- a/src/main/resources/lang/en_US.json
+++ b/src/main/resources/lang/en_US.json
@@ -35,7 +35,8 @@
     "createteamgui.invites.name": "View invites",
     "chatinput.exit": "exit",
     "chatinput.cancel": "You exited the input.",
-    "chatinput.changename.question": "Whrite yout new Team name to the chat or exit with \"<exit>\"",
+    "chatinput.changename.question": "Whrite yout new team name to the chat or exit with \"<exit>\"",
+    "chatinput.changetag.question": "Whrite yout new team tag to the chat or exit with \"<exit>\"",
     "playermanagement.makeowner.name": "Make owner",
     "playermanagement.kick.name": "Kick",
     "InvitePlayer": "invite player",
